--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.4"
 
 services:
   db:
-    image: postgres:13.2-alpine
+    image: postgres:latest
     restart: always
     ports:
       - "5432:5432"
